--- a/css/index.css
+++ b/css/index.css
@@ -50,11 +50,22 @@ body{
 	float: right;
 }
 
-.chooseCenterF{
-	margin-left: 29%;
+.colorPicker{
+	float: left;
+	margin-bottom: 0px;
+}
+
+.colorLabel{
+	float: left;
+	margin-top: 50px;
 }
 
 .dropDiv{
 	float: right;
 	margin-right: 5px;
+}
+
+.leftColor{
+	border-left-width: 5px;
+	border-left-color:#1b809e;
 }
