--- a/css/index.css
+++ b/css/index.css
@@ -90,3 +90,38 @@ body{
 	margin-bottom: 10px;
 	margin-left: 15%;
 }
+
+.myInput{
+  display: block;
+  width: 53px;
+  height: 28px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555555;
+  vertical-align: middle;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  float: right;
+  margin-right: 5px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+          transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+}
+
+.updownPos{
+	float: right;
+}
+
+.myListGroup{
+	padding-left: 0;
+}
+
+.myPanelBody{
+	padding-left: 15px;
+	padding-top: 15px;
+	padding-right: 15px;
+	padding-bottom: 1px;
+}
